--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/Hosein.png" alt="Angela Yu Profile picture"></td>
+            <td><img src="images/Hosein.png" alt="Hosein Profile picture"></td>
             <td><h1>Hosein Allafian</h1>
     <p><em>Founder and CTO of <strong><a href="https://www.google.com">the FinGrow Robot</a></strong>.</em></p>
     <p>I am an iOS and Web Developer. I love ice-cream.</p></td>
